--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,6 +1,6 @@
   body {
    padding-left: 11em;
-   font-family: Georgia, "Calibri,
+   font-family: Georgia, "Calibri",
           Times, serif;
 		  color: purple;
     background-color: #d8da3d }
