--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,8 +3,13 @@
    font-family: Georgia, "Calibri",
           Times, serif;
 		  color: purple;
-    background-color: #d8da3d }
-	 ul.navbar {
+	  background: #2593DB;
+	  background: -moz-linear-gradient(left, #2593DB 0%, #000000 50%, #2593DB 100%);
+	  background: -webkit-linear-gradient(left, #2593DB 0%, #000000 50%, #2593DB 100%);
+	  background: linear-gradient(to right, #2593DB 0%, #000000 50%, #2593DB 100%); }
+
+
+		ul.navbar {
     list-style-type: none;
     padding: 0;
     margin: 0;
