--- a/styles/minimal-table.css
+++ b/styles/minimal-table.css
@@ -6,7 +6,11 @@ padding-left: 11em;
    font-family: Georgia, "Times New Roman",
           Times, serif;
 		  color: purple;
-    background-color: #d8da3d }
+    background: #2593DB;
+background: -moz-linear-gradient(left, #2593DB 0%, #000000 50%, #2593DB 100%);
+background: -webkit-linear-gradient(left, #2593DB 0%, #000000 50%, #2593DB 100%);
+background: linear-gradient(to right, #2593DB 0%, #000000 50%, #2593DB 100%);
+}
 	  ul.navbar {
      list-style-type: none;
     padding: 0;
