--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -35,3 +35,10 @@
     margin-top: 1em;
     padding-top: 1em;
     border-top: thin dotted }
+
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
