--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -42,3 +42,23 @@
   border: 3px solid green;
   padding: 10px;
 }
+
+.bordered-text {
+  border: 2px solid #2593DB; 
+  padding: 10px;
+  position: relative;
+  display: inline-block;
+}
+
+.bordered-text h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  background-color: white;
+  padding: 5px;
+}
+
+.bordered-text p {
+  margin-top: 30px; 
+}
