--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -48,6 +48,18 @@
   margin: auto;
 }
 
+.bordered-text::before {
+  content: "";
+  position: absolute;
+  top: 5px; 
+  left: 0;
+  width: 20px; 
+  height: 100%;
+  background-image: linear-gradient(to right, rgba(37, 147, 219, 0), rgba(37, 147, 219, 1)); 
+  opacity: 0.7; 
+}
+
+
 .bordered-text h2 {
   position: absolute;
   top: 0;
