--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -44,7 +44,7 @@
   padding: 10px;
   position: relative;
   display: inline-block;
-  background-color: #F5F5F5;
+  /*background-color: #F5F5F5;*/
   margin: auto;
   text-align: center;
 }
