--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -2,7 +2,7 @@
   padding-left: 11em;
   font-family: Georgia, Calibri;
   background-color: #141c3a;
-  background-image: linear-gradient(to bottom right, #141c3a, #002b5c);
+  background: linear-gradient(to bottom right, #141c3a, #002b5c);
   color: white;}
 
 
