--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -33,6 +33,19 @@
     padding-top: 1em;
     border-top: thin dotted }
 
+
+    footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #f5f5f5;
+      padding: 10px;
+      text-align: center;
+    }
+
+
+
 .center {
   margin: auto;
   width: 50%;
@@ -72,3 +85,4 @@
 .bordered-text p {
   margin-top: 30px; 
 }
+
