--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -33,16 +33,16 @@
     padding-top: 1em;
     border-top: thin dotted }
 
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  padding: 10px;
+  text-align: center;
+}
 
-    footer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #f5f5f5;
-      padding: 10px;
-      text-align: center;
-    }
 
 
 
