--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -3,6 +3,8 @@
   font-family: Georgia, Calibri;
   background-color: #141c3a;
   background: linear-gradient(to bottom right, #141c3a, #002b5c);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;}
 
 
