--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,11 +1,13 @@
-  body {
+body {
   padding-left: 11em;
   font-family: Georgia, Calibri;
-  background-color: #141c3a;
   background: linear-gradient(to bottom right, #141c3a, #002b5c);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: white;}
+  background-size: cover;
+  color: white;
+}
+
 
 
 		ul.navbar {
