--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -1,92 +1,86 @@
 body {
-  padding-left: 11em;
-  font-family: Georgia, Calibri;
-  background: linear-gradient(to bottom right, #141c3a, #002b5c);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  color: white;
+     padding-left: 11em;
+     font-family: Georgia, Calibri;
+     background: linear-gradient(to bottom right, #141c3a, #002b5c);
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-size: cover;
+     color: white;
 }
-
-
-
-		ul.navbar {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-	position: absolute;
-    top: 2em;
-    left: 1em;
-    width: 10em }
-	h1 {
-    font-family: Helvetica, Geneva, Arial,
-          SunSans-Regular, sans-serif }
-		ul.navbar li {
-    background: white;
-    margin: 0.5em 0;
-    padding: 0.3em;
-    border-right: 1em solid black }
-  ul.navbar a {
-    text-decoration: none }
-  a:link {
-    color: blue }
-  a:visited {
-    color: purple }
-	address {
-    margin-top: 1em;
-    padding-top: 1em;
-    border-top: thin dotted }
-
-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: transparent;
-  padding: 10px;
-  text-align: center;
+ ul.navbar {
+     list-style-type: none;
+     padding: 0;
+     margin: 0;
+     position: absolute;
+     top: 2em;
+     left: 1em;
+     width: 10em 
 }
-
-
-
-
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
+ h1 {
+     font-family: Helvetica, Geneva, Arial, SunSans-Regular, sans-serif 
 }
-
-.bordered-text {
-  border: 2px solid #2593DB; 
-  padding: 10px;
-  position: relative;
-  display: inline-block;
-  /*background-color: #F5F5F5;*/
-  margin: auto;
-  text-align: center;
+ ul.navbar li {
+     background: white;
+     margin: 0.5em 0;
+     padding: 0.3em;
+     border-right: 1em solid black 
 }
-
-.bordered-text::before {
-  content: "";
-  position: absolute;
-  top: 5px; 
-  left: 0;
-  width: 20px; 
-  height: 100%;
-  background-image: linear-gradient(to right, rgba(37, 147, 219, 0), rgba(37, 147, 219, 1)); 
-  opacity: 0.7; 
+ ul.navbar a {
+     text-decoration: none 
 }
-
-
-.bordered-text h2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  padding: 5px;
+ a:link {
+     color: blue 
 }
-
-.bordered-text p {
-  margin-top: 30px; 
+ a:visited {
+     color: purple 
 }
-
+ address {
+     margin-top: 1em;
+     padding-top: 1em;
+     border-top: thin dotted 
+}
+ footer {
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     width: 100%;
+     background-color: transparent;
+     padding: 10px;
+     text-align: center;
+}
+ .center {
+     margin: auto;
+     width: 50%;
+     padding: 10px;
+}
+ .bordered-text {
+     border: 2px solid #2593DB;
+     padding: 10px;
+     position: relative;
+     display: inline-block;
+    background-color: #E6F2FF;
+    
+     margin: auto;
+     text-align: center;
+}
+ .bordered-text::before {
+     content: "";
+     position: absolute;
+     top: 5px;
+     left: 0;
+     width: 20px;
+     height: 100%;
+     background-image: linear-gradient(to right, rgba(37, 147, 219, 0), rgba(37, 147, 219, 1));
+     opacity: 0.7;
+}
+ .bordered-text h2 {
+     position: absolute;
+     top: 0;
+     left: 0;
+     margin: 0;
+     padding: 5px;
+}
+ .bordered-text p {
+     margin-top: 30px;
+}
+ 
