--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -50,10 +50,7 @@ body {
 }
 
 .center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+  text-align: center;
 }
 
 .bordered-text {
@@ -63,6 +60,7 @@ body {
   background-color: #E6F2FF;
   text-align: center;
 }
+
 
 
 }
