--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -49,21 +49,22 @@ body {
      text-align: center;
 }
 
-.center {
-  text-align: center;
+ .center {
+     margin: auto;
+     width: 50%;
+     padding: 10px;
 }
 
-.bordered-text {
-  border: 2px solid #2593DB;
-  padding: 10px;
-  display: inline-block;
-  background-color: #E6F2FF;
-  text-align: center;
+ .bordered-text {
+     border: 2px solid #2593DB;
+     padding: 10px;
+     position: relative;
+     display: inline-block;
+     background-color: #E6F2FF;
+     margin: 0 auto;
+     text-align: center;
 }
 
-
-
-}
  .bordered-text::before {
      content: "";
      position: absolute;
