--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -60,7 +60,7 @@ body {
      padding: 10px;
      position: relative;
      display: inline-block;
-     background-color: #E6F2FF;
+     /*background-color: #E6F2FF;*/
      margin: 0 auto;
      text-align: center;
 }
