--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -56,6 +56,7 @@ body {
 }
 
 .bordered-text {
+  animation: fade-in-move-down 0.7s;
   border: 2px solid #2593DB;
   padding: 5px;
   text-align: center; 
@@ -63,17 +64,18 @@ body {
   max-width: 50%; 
 }
 
-
- .bordered-text::before {
-     content: "";
-     position: absolute;
-     top: 5px;
-     left: 0;
-     width: 20px;
-     height: 100%;
-     background-image: linear-gradient(to right, rgba(37, 147, 219, 0), rgba(37, 147, 219, 1));
-     opacity: 0.7;
+@keyframes fade-in-move-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-3rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
+
 
  .bordered-text p {
      margin-top: 30px;
