--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -40,7 +40,7 @@ body {
      border-top: thin dotted 
 }
  footer {
-     font-family: Verdana, Geneva, sans-serif;
+     font-family: Arial, sans-serif;
      position: fixed;
      bottom: 0;
      left: 0;
