--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -9,7 +9,7 @@ body {
 }
  ul.navbar {
      font-weight: bold;
-     font-family: Arial, sans-serif;
+     font-family: 'Oswald', sans-serif;
      list-style-type: none;
      padding: 5px;
      margin: 0;
