--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -8,7 +8,7 @@ body {
      color: white;
 }
  ul.navbar {
-     font-family: 'Oswald', sans-serif;
+     font-family: 'Lato', sans-serif;
      list-style-type: none;
      padding: 5px;
      margin: 0;
